# jmoggr.com

./: .gitignore  Cargo.toml  README.md  about.html  flake.nix  go.mod  index.html  package-lock.json  pnpm-lock.yaml  post.md  robots.txt.html  rust-toolchain.toml  tailwind.config.js
.github/workflows/: deploy.yml
cmd/develop/: main.go
cmd/preview/: main.go
components/: layout.go  typography.go
nix/: website.nix
pages/: about.go  home.go  pages.go
pages/posts/simple-ssg-generator-with-go/: post.md
public/: about.html  index.html  robots.txt.html
server/: routes.go  server.go
src/: app.rs  lib.rs  main.rs
src/talks/: game_networking_part_1.rs  introduction_to_multiplayer_networking.rs  mod.rs
static/: styles.css
talks/game-networking-part-1/: .gitignore  README.md  default.nix  demos-prompt.txt
talks/game-networking-part-1/demos/demo1/: index.html  networking.ts  server.ts  styles.css  ui.ts
talks/game-networking-part-1/demos/demo2/: game.ts  index.html  networking.ts  server.ts  ui.ts
talks/game-networking-part-1/demos/demo3/: client.ts  index.html  server.ts  types.ts  ui.ts
talks/game-networking-part-1/slides/: package.json  slides.md
talks/introduction-to-multiplayer-networking/: README.md  default.nix  demos-prompt.txt
talks/introduction-to-multiplayer-networking/demos/demo1/: index.html
talks/introduction-to-multiplayer-networking/demos/demo1/client/: networking.ts  ui.ts
talks/introduction-to-multiplayer-networking/demos/demo1/server/: index.ts
talks/introduction-to-multiplayer-networking/demos/demo1/shared/: types.ts
talks/introduction-to-multiplayer-networking/demos/demo2/client/: ui.ts
talks/introduction-to-multiplayer-networking/demos/demo2/server/: index.ts
talks/introduction-to-multiplayer-networking/slides/: index.html  package.json  pnpm-lock.yaml
(+4 files in other folders)
