[package]
name = "jmoggr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos_axum = { version = "0.7", optional = true }
styled = "0.3"
stylist = "0.13"

axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
http = { version = "1", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

thiserror = "2"
serde = { version = "1", features = ["derive"] }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
]

[package.metadata.leptos]
# Name of the binary target used to serve the app
bin-target = "jmoggr"
# Features for the lib (client/WASM)
lib-features = ["hydrate"]
# Features for the server binary
bin-features = ["ssr"]
# The site root folder is where cargo-leptos generates all output
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
site-pkg-dir = "pkg"
# The IP and port where the server serves the content
site-addr = "127.0.0.1:3000"
# The port number used by the reload server
reload-port = 3001
# Use WASM files directly instead of JS wrapper
wasm-opt = "z"

[[bin]]
name = "jmoggr"
path = "src/main.rs"
required-features = ["ssr"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
